# VirtualAA2

./: .gitignore  CMakeLists.txt  README.md
src/: ArrayView.cpp  ArrayView.hpp  BufferReader.hpp  CMakeLists.txt  File.hpp  PPArchive.cpp  PPArchive.hpp  XXModel.cpp  XXModel.hpp  debug.hpp  filesystem-win.cpp  filesystem-win.hpp  main-dokan.cpp  main.cpp
src/compressors/: deflate.cpp  deflate.hpp  lz4.cpp  lz4.hpp  lzma.cpp  lzma.hpp  zstd.cpp  zstd.hpp
src/decoders/: BulkArchive.cpp  BulkArchive.hpp  PPArchive.cpp  PPArchive.hpp  PPCrypto.cpp  PPCrypto.hpp  XXModel.cpp  XXModel.hpp
src/encoders/: BulkArchiveWriter.cpp  BulkArchiveWriter.hpp  PPCompactor.cpp  PPCompactor.hpp
src/filesystem/: BufferHandle.hpp  CompressedFile.cpp  CompressedFile.hpp  DeflateFile.cpp  DeflateFile.hpp  FakeDir.cpp  FakeDir.hpp  FileFactory.cpp  FileFactory.hpp  FileObject.cpp  FileObject.hpp  FilePath.hpp  FileSystem.cpp  FileSystem.hpp  Lz4File.cpp  Lz4File.hpp  LzmaFile.cpp  LzmaFile.hpp  PPFile.cpp  PPFile.hpp  PPFolder.cpp  PPFolder.hpp  PassthroughDir.cpp  PassthroughDir.hpp  PassthroughFile.cpp  PassthroughFile.hpp  TypeIDs.hpp  VirtualDataDir.cpp  VirtualDataDir.hpp  ZstdFile.cpp  ZstdFile.hpp
src/filesystem/mergers/: AMergingObject.cpp  AMergingObject.hpp  FakeDir.cpp  FakeDir.hpp  MergedPPFile.cpp  MergedPPFile.hpp  PassthroughMerger.hpp
src/resources/: Deduper.cpp  Deduper.hpp
src/utils/: ArrayView.hpp  Buffer.hpp  BufferReader.hpp  ByteViewReader.hpp  File.cpp  File.hpp  StringView.hpp
test/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  PackUpdaterImport.py  WizardImport.py
tools/xxViewer/: main.cpp  vertex.glsl
